refactor: extract mapper abstraction and pagination params
- Create AbstractNullSafeMapper base class (eliminates duplicate
  toDomainList/toEntityList in entity mappers)
- Migrate NotificationEntityMapper, GoalEntityMapper, BudgetEntityMapper
  to extend AbstractNullSafeMapper
- Flatten BudgetEntityMapper.toEntity() nesting (if+for → stream)
- Create PaginationParams record (encapsulates page/size with max cap)
- Update 4 controllers to use PaginationParams.of()
- Standardize .collect(Collectors.toList()) → .toList() (Java 16+)

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>