@@ -8,7 +8,6 @@ import org.springframework.stereotype.Component;
 
 import java.time.ZoneOffset;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Component
 public class AccountMapper {
@@ -66,6 +65,6 @@ public class AccountMapper {
 	public List<AccountResponse> toResponseList(List<Account> domains) {
 		if (domains == null)
 			return null;
-		return domains.stream().map(this::toResponse).collect(Collectors.toList());
+		return domains.stream().map(this::toResponse).toList();
 	}
 }
